--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -19,6 +19,18 @@
                     </form>
                     </div>
                   </div>
+                  <h2>Leave a Review</h2>
+                  <form class="mb-3" action="">
+                    <div class="mb-3">
+                      <label class="form-label" for="rating">Rating</label>
+                      <input name="review[rating]" id="rating" class="form-range" type ="range" min="1" max="5">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label" for="body">Review</label>
+                      <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+                    </div>
+                    <button class="btn btn-success">Submit</button>
+                  </form>
             </div>
         </div>
  
