--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -20,7 +20,7 @@
                     </div>
                   </div>
                   <h2>Leave a Review</h2>
-                  <form class="mb-3" action="">
+                  <form class="mb-3" action="/campgrounds/<%= camp._id %>/reviews" method="POST">
                     <div class="mb-3">
                       <label class="form-label" for="rating">Rating</label>
                       <input name="review[rating]" id="rating" class="form-range" type ="range" min="1" max="5">
