--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -1,6 +1,6 @@
 <%layout('layout/boilerplate') %>
         <div class="row">
-            <div class="col-6 offset-3">
+            <div class="col-6">
                 <div class="card mb-3">
                     <img src="<%= camp.image %>" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -19,7 +19,9 @@
                     </form>
                     </div>
                   </div>
-                  <h2>Leave a Review</h2>
+            </div>
+            <div class="col-6">
+              <h2>Leave a Review</h2>
                   <form class="mb-3 needs-validation" novalidate action="/campgrounds/<%= camp._id %>/reviews" method="POST">
                     <div class="mb-3">
                       <label class="form-label" for="rating">Rating</label>
@@ -34,11 +36,12 @@
                   </form>
 
                   <% for (let review of camp.reviews) { %>
-                        <div class="mb-3">
-                          <p>Rating: <%= review.rating %> </p>
-                          <p>Review: <%= review.body %> </p>
-                        </div>
-                    
+                    <div class="card mb-3">
+                      <div class="card-body">
+                        <h5 class="card-title">Rating: <%= review.rating %> </h5>
+                        <p class="card-text">Review: <%= review.body %> </p>
+                      </div>
+                    </div>
                     <% } %>  
             </div>
         </div>
