--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,6 +1,6 @@
 <%layout('layout/boilerplate') %> 
     <h1>All Campgrounds</h1>
-   <div><a href="/makecampground">Add Campground</a></div> 
+   <div><a href="/campgrounds/new">Add Campground</a></div> 
     
         <% for(let campground of campgrounds) { %> 
             <div class="card mb-3" >
