--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/campgrounds">Campgrounds</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/makecampground">New Campground</a>
+            <a class="nav-link" href="/campgrounds/new">New Campground</a>
           </li>
           
         </ul>
